force-app/main/default/objects/Template_Role_Eligibility__c/Template_Role_Eligibility__c.object-meta.xml
<CustomObject>
    <description>Junction object linking incentive plan templates to participant roles, defining which roles are eligible for each plan template.</description>
    <label>Template Role Eligibility</label>
    <nameField>
        <displayFormat>TRE-{00000}</displayFormat>
        <label>Template Role Eligibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Role Eligibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>