force-app/main/default/objects/Template_Role_Eligibility__c/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <description>The participant role eligible for this plan template.</description>
    <label>Participant Role</label>
    <type>MasterDetail</type>
    <referenceTo>Participant_Role__c</referenceTo>
    <relationshipLabel>Template Eligibilities</relationshipLabel>
    <relationshipName>Template_Eligibilities</relationshipName>
</CustomField>